Added 3 wallets and modified some attribute details
- added KYC attribute
- added TenX wallet
- added Coinbase Wallet
- added Walleth
- added no-erc20 attribute
- reduced impact of stability-2 attribute from 1 to 0.5

--- a/css/style.css
+++ b/css/style.css
@@ -4507,6 +4507,11 @@ aside .widget{
     margin-bottom: 20px;
 }
 
+.imgContainer img {
+    max-width: 100%;
+    max-height: 600px;
+}
+
 twitter-widget {
     margin: 10px auto !important;
 }
