--- a/partials/menu.phtml
+++ b/partials/menu.phtml
@@ -1,6 +1,6 @@
 <div class="responsive-menu" data-putinto="responsive-header">
 	<span class="close-reposive"><i class="la la-close"></i></span>
-	<div class="logo"><a href="/" title=""><img height="52px" src="/images/logo.png" alt="" /></a></div>
+	<div class="logo"><a href="/" title="Wallets"><img height="52px" src="/images/logo.png" alt="Wallets logo" /></a></div>
 	<ul>
 		<li class="menu">
 			<a href="/" title="">Home</a>
